--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- CSS bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- CSS FullScreen -->
   <link rel="stylesheet" href="./assets/fullscreen/Control.FullScreen.css" />
+  <link rel="stylesheet" href="./assets/LayersTree/LayersTree.css">
 </head>
 
 <body>
